[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ui/Interface_16.png" type="Texture" id=1]
[ext_resource path="res://combat/interface/theme/MatchupInterface_theme.tres" type="Theme" id=2]
[ext_resource path="res://combat/interface/MatchupOption.gd" type="Script" id=3]

[node name="MatchupOption" type="PanelContainer"]
margin_top = 54.0
margin_right = 689.0
margin_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row" type="HBoxContainer" parent="."]
margin_right = 689.0
margin_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 0
alignment = 1

[node name="AttackerMove" type="Label" parent="Row"]
margin_top = 8.0
margin_right = 328.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "Attack"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultIcon" type="TextureRect" parent="Row"]
margin_left = 328.0
margin_right = 360.0
margin_bottom = 48.0
rect_min_size = Vector2( 32, 16 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefenderMove" type="Label" parent="Row"]
margin_left = 360.0
margin_top = 8.0
margin_right = 689.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "Defend"
align = 1
